# End-to-End-Video-RAG-Understanding-with-Local-Agentic-SLM

./: README.md
backend/: .env_example  README.md  app.py  config.py  database.py  requirements.txt
backend/config/: service_config.py
backend/notebooks/: video_rag.ipynb
backend/src/llm/: chat_model.py  embedding_model.py  inference.py  model_loader.py
backend/src/mcp_tools/: audio_extractor.py  video_frames_extractor.py
backend/src/prompt_engineering/: schemas.py  templates.py
backend/src/vector_database/: embeddings.py  qdrant_client.py  retriever.py  utils.py
backend/test/: run_rag.py
backend/web/: app.py  database.py
backend/web/agent/: agent_workflow_builder.py  audio_extraction_agent.py  frame_extraction_agent.py  general_question_agent.py  rag_agent.py  report_agent.py  summary_agent.py  supervisor_agent.py
backend/web/mcp_tools/: audio_extractor.py  video_frames_extractor.py
backend/web/test/: run_agent_workflow.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/.ipynb_checkpoints/: main-checkpoint.jsx
frontend/src/components/: ChatBox.jsx  Message.jsx  Sidebar.jsx
frontend/src/context/: AppContext.jsx
frontend/src/services/: api.js
frontend/src/services/.ipynb_checkpoints/: api-checkpoint.js
