[package]
name = "app"
version = "0.1.0"
description = "AI Chat Assistant"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
# Core Tauri
tauri = { version = "2.0.5", features = ["devtools"] }
tauri-plugin-shell = "2.0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP Client for FastAPI communication
reqwest = { version = "0.12", features = ["json"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
